# hc256

./: .gitignore  Cargo.toml  README.md
hc256/: Cargo.toml
hc256-util/: Cargo.toml  README.md
hc256-util/src/: main.rs
hc256/src/: buf.rs  lib.rs  reg.rs
hc256/tests/: buf-test-vectors.rs  buf-timing.rs  test-vectors.rs  timing.rs
hc256/timing/: apply-stream-time-info-4_3GB  clock-stream-time  init-time-info-2048
src/: lib.rs
tests/: test-vectors.rs  timing.rs
