[package]
name = "hc256"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeroize = { version = "1.4", features = ["zeroize_derive"] }

[dev-dependencies]
rand = "0.8"
libc = "0.2"